# NapCatOpenCodeChannel

./: .gitignore  LICENSE  README.md  config.example.toml  config.toml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: dev-plan-v1.md  product-v1.md
nochan/: __init__.py  command.py  config.py  converter.py  handler.py  log.py  opencode.py  prompt.py  server.py  session.py
tests/: conftest.py  mock_napcat.py  test_command.py  test_config.py  test_converter.py  test_handler.py  test_integration.py  test_opencode.py  test_prompt.py  test_server.py  test_session.py
tests/manual/: verify_napcat.py  verify_opencode.py
