[project]
name = "nochan"
version = "0.1.0"
description = "NapCatOpenCodeChannel - Bridge between NapCatQQ and OpenCode AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "websockets",
    "aiosqlite",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
